Fix card collection spacing and scrolling for variables and groups

--- a/user-interface/frontend/themes/datamanager/components/card.css
+++ b/user-interface/frontend/themes/datamanager/components/card.css
@@ -48,22 +48,20 @@
   opacity: 0.05;
 }
 
-.experimental-group {
-  display: flex;
-  flex-direction: column;
-  flex: auto;
-  font-size: var(--lumo-font-size-s);
-  padding: var(--lumo-space-l);
-  max-width: 300px;
-}
-
 .card-collection {
   display: flex;
   align-content: space-evenly;
   flex-flow: column;
   gap: 1rem;
-  margin-left: 1.5rem;
-  margin-top: 1.5rem;
+  padding-left: 1.5rem;
+  padding-top: 1.5rem;
+}
+
+.card-collection .experimental-group {
+  display: flex;
+  flex-direction: column;
+  font-size: var(--lumo-font-size-s);
+  padding: var(--lumo-space-l);
 }
 
 .card-collection .collection-title {
@@ -79,11 +77,10 @@
 }
 
 .card-collection .collection-content {
-  display: flex;
-  align-content: space-evenly;
-  flex-flow: row wrap;
-  gap: 1rem;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: auto;
+  grid-gap: 1rem;
 }
 
 .card-collection .collection-controls {
@@ -93,29 +90,29 @@
   gap: 0.5rem;
 }
 
-.experimental-group .header {
+.card-collection .experimental-group .header {
   display: flex;
   justify-content: space-between;
   align-items: baseline;
   margin-bottom: var(--lumo-space-m);
 }
 
-.experimental-group .card-title {
+.card-collection .experimental-group .card-title {
   color: var(--lumo-secondary-text-color);
   font-size: var(--lumo-font-size-m);
   font-weight: bold;
-  white-space: nowrap;
   margin-bottom: 0.5rem;
 }
 
-.experimental-group .content {
-  display: inline-flex;
+.card-collection .experimental-group .content {
+  display: flex;
   flex-wrap: wrap;
   gap: var(--lumo-space-m);
   margin-bottom: var(--lumo-space-m);
+  flex-direction: column;
 }
 
-.experimental-group vaadin-icon {
+.card-collection .experimental-group vaadin-icon {
   cursor: pointer;
   width: 1em;
   color: darkgrey;
