--- a/user-interface/frontend/themes/datamanager/components/page-area.css
+++ b/user-interface/frontend/themes/datamanager/components/page-area.css
@@ -95,11 +95,6 @@
   font-size: var(--lumo-font-size-s);
 }
 
-.experiment-details-component vaadin-tabsheet {
-  height: 100%;
-  width: 100%;
-}
-
 /*Necessary so the disclaimers are aligned to the center of the tab*/
 .experiment-details-component .details-content .experimental-groups-container {
   height: 100%;
